# plasmonX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh
cmake/: ConfigTesting.cmake  Tests_plasmonX.cmake
docs/: .readthedocs.yaml  requirements.txt
docs/source/: Authors.rst  Installation.rst  Papers.rst  Prerequisites.rst  User_Manual.rst  conf.py  index.rst  input_file.rst  output_file.rst  post_analysis.rst
python/: requirements.txt  requirements.yaml  script_old_mfq_to_yaml.py
python/analysis/: __init__.py  io_and_plot.py  plasmonX_analysis.py
python/input_/: __init__.py  check_sections.py  geom_interface.py  io_operations.py  plasmonX.py  references.py  resource_management.py  timing_utils.py  validation.py
src/: CMakeLists.txt  plasmonX.f90
src/bem/: accurate_green_function.f90  accurate_green_function_interface.f90  bem_module.f90  exact_green_function.f90  exact_green_function_interface.f90
src/control/: control_module.f90
src/field/: field_module.f90
src/forcefield/: fq_module.f90  fqfmu_module.f90
src/input_output/: input_module.f90  output_module.f90
src/matrix/: matrix_module.f90
src/memory_manager/: memory_manager_module.f90
src/parameters/: parameters_module.f90
src/plasmonX_analysis/: control_analysis_module.f90  grid_module.f90  input_analysis_module.f90  output_analysis_module.f90  plasmonX_analysis.f90  plot_module.f90
src/rhs/: rhs_module.f90
src/solvers/: algorithm_module.f90  gmres_module.f90
src/tools/: array_manipulation_module.f90  float_manipulation_module.f90  string_manipulation_module.f90
src/wfq/: wfq_module.f90  wfqfmu_module.f90
submodules/geom/: .gitignore  MANIFEST.in  README.md  install.sh  requirements.txt  setup.py
tests/: runtest_config.py
tests/analysis_density_2d_x_wfq_sodium/: test
tests/analysis_density_2d_x_wfq_sodium_n_planes/: test
tests/analysis_density_2d_y_xy_wfqfmu_ag/: test
tests/analysis_density_3d_x_wfq_sodium/: test
tests/analysis_density_3d_x_wfq_sodium_plt/: test
tests/analysis_density_3d_y_wfqfmu_au/: test
tests/analysis_density_3d_y_wfqfmu_au_plt/: test
tests/analysis_field_2d_x_yz_wfq_sodium/: test
tests/analysis_field_2d_y_xy_bem/: analysis_field_2d_y_xy_bem.yaml  test
tests/analysis_field_2d_z_xz_wfqfmu_ag/: test
tests/analysis_field_2d_z_xz_wfqfmu_ag_reduced/: test
tests/analysis_field_3d_x_wfq_sodium/: test
tests/analysis_field_3d_x_wfq_sodium_plt/: test
tests/analysis_field_3d_x_y_z_wfqfmu_ag/: test
tests/analysis_field_3d_x_y_z_wfqfmu_ag_plt/: test
tests/analysis_field_3d_y_bem/: test
tests/analysis_field_volume_x_wfq_sodium/: test
tests/analysis_field_volume_z_wfqfmu_au/: analysis_field_volume_z_wfqfmu_au.yaml  test
tests/analysis_pqr_bem/: test
tests/analysis_pqr_wfq_sodium/: analysis_pqr_wfq_sodium.yaml  test
tests/analysis_xyz/: test
tests/analysis_xyz_bem/: matlab.msh  test
tests/bem_dpcm_accurate_inversion/: bem_dpcm_accurate_inversion.yaml  test
tests/bem_dpcm_accurate_iterative_on_memory/: bem_dpcm_accurate_iterative_on_memory.yaml  test
tests/bem_dpcm_brendel_bormann_ag/: bem_dpcm_brendel_bormann_ag.yaml  test
tests/bem_dpcm_brendel_bormann_au/: bem_dpcm_brendel_bormann_au.yaml  test
tests/bem_dpcm_exact_inversion/: bem_dpcm_exact_inversion.mfq  bem_dpcm_exact_inversion.yaml  test
tests/bem_dpcm_exact_iterative_on_memory/: bem_dpcm_exact_iterative_on_memory.mfq  bem_dpcm_exact_iterative_on_memory.yaml  test
tests/bem_dpcm_external_brendel_bormann_ag/: bem_dpcm_external_brendel_bormann_ag.yaml  epsilon_ag.csv  test
tests/bem_dpcm_geom_rod/: test
tests/bem_dpcm_geom_sphere/: bem_dpcm_geom_sphere.yaml  test
tests/bem_dpcm_palik_ag/: bem_dpcm_palik_ag.yaml  test
tests/bem_dpcm_palik_au/: bem_dpcm_palik_au.yaml  test
tests/bem_ief_accurate_inversion/: bem_ief_accurate_inversion.yaml  test
tests/bem_ief_approximate_inversion/: bem_ief_approximate_inversion.yaml  test
tests/bem_ief_exact_inversion/: bem_ief_exact_inversion.tmp  bem_ief_exact_inversion.yaml  test
tests/fq_energy/: fq_energy.mfq  fq_energy.yaml  test
tests/fq_polarizability/: fq_polarizability.mfq  fq_polarizability.yaml  test
tests/fq_principal_axis_energy/: fq_principal_axis_energy.mfq  fq_principal_axis_energy.yaml  test
tests/fqfmu_energy/: fqfmu_energy.mfq  fqfmu_energy.yaml  test
tests/fqfmu_rq_rmu_energy/: fqfmu_rq_rmu_energy.mfq  fqfmu_rq_rmu_energy.yaml  test
tests/wfq_graphene_disk_inversion/: test  wfq_graphene_disk_inversion.mfq  wfq_graphene_disk_inversion.yaml
tests/wfq_graphene_geom_disk/: test  wfq_graphene_geom_disk.yaml
tests/wfq_graphene_geom_ribbon_main_armchair/: test  wfq_graphene_geom_ribbon_main_armchair.yaml
tests/wfq_graphene_geom_ribbon_main_zigzag/: test  wfq_graphene_geom_ribbon_main_zigzag.yaml
tests/wfq_graphene_geom_ring/: test  wfq_graphene_geom_ring.yaml
tests/wfq_graphene_geom_triangle_armchair/: test  wfq_graphene_geom_triangle_armchair.yaml
tests/wfq_graphene_geom_triangle_zigzag/: test  wfq_graphene_geom_triangle_zigzag.yaml
tests/wfq_graphene_minimal_input/: test  wfq_graphene_minimal_input.yaml
tests/wfq_graphene_ribbon_inversion/: test  wfq_graphene_ribbon_inversion.mfq  wfq_graphene_ribbon_inversion.yaml
tests/wfq_graphene_triangle_inversion/: test  wfq_graphene_triangle_inversion.mfq  wfq_graphene_triangle_inversion.yaml
tests/wfq_sodium_geom_rod/: test  wfq_sodium_geom_rod.yaml
tests/wfq_sodium_geom_sphere/: test  wfq_sodium_geom_sphere.yaml
tests/wfq_sodium_inversion/: test  wfq_sodium_inversion.mfq  wfq_sodium_inversion.yaml
tests/wfq_sodium_iterative_on_memory/: test  wfq_sodium_iterative_on_memory.mfq  wfq_sodium_iterative_on_memory.yaml
tests/wfq_sodium_iterative_on_the_fly/: test  wfq_sodium_iterative_on_the_fly.mfq  wfq_sodium_iterative_on_the_fly.yaml
tests/wfq_sodium_minimal_input/: test  wfq_sodium_minimal_input.yaml
tests/wfq_sodium_restart/: test  wfq_sodium_restart.yaml
tests/wfqfmu_ag_diff_units/: test  wfqfmu_ag_diff_units.yaml
tests/wfqfmu_ag_geom_decahedron/: test  wfqfmu_ag_geom_decahedron.yaml
(+174 files in other folders)
